--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter-project",
-  "version": "2.0.0",
+  "name": "@skyflow/react-sample-app",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,9 +30,9 @@
       "jsx"
     ]
   },
-  "author": "Vasanth Kumar <vasanth.kumar@zemosolabs.com",
+  
   "license": "MIT",
-  "private": true,
+  
   "engines": {
     "node": ">=8",
     "npm": ">=3"
@@ -42,21 +42,14 @@
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.2.0",
-    "axios": "^0.19.0",
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "clsx": "^1.0.4",
     "eslint-config-zemoso": "^1.0.1",
-    "koa-connect": "^2.0.1",
-    "lodash": ">=4.17.13",
-    "plotly.js-dist": "^1.48.3",
-    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "4.11.0",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.4"
+    "react-router-dom": "^5.2.0"
+    
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
