--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
       "jsx"
     ]
   },
-  
   "license": "MIT",
-  
   "engines": {
     "node": ">=8",
     "npm": ">=3"
@@ -49,7 +47,6 @@
     "react-dom": "16.8.6",
     "react-hot-loader": "4.11.0",
     "react-router-dom": "^5.2.0"
-    
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
@@ -68,7 +65,6 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.5",
-    "babel-preset-react-optimize": "1.0.1",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.4",
     "@babel/runtime": "7.4.5",
@@ -77,13 +73,12 @@
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-lodash": "3.3.4",
+    "babel-preset-react-optimize": "1.0.1",
     "browserslist": "4.6.2",
     "clean-webpack-plugin": "3.0.0",
     "connect-history-api-fallback": "1.6.0",
     "cross-env": "5.2.0",
     "css-loader": "3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "eslint": "5.16.0",
@@ -97,21 +92,24 @@
     "eslint-watch": "5.1.2",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
-    "script-ext-html-webpack-plugin": "2.1.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.8.0",
     "jest-css-modules-transform": "2.5.0",
     "jest-enzyme": "7.0.2",
     "jest-fetch-mock": "2.1.2",
     "jsdom": "15.1.1",
+    "koa-connect": "^2.0.1",
     "lint-staged": "8.2.0",
     "mini-css-extract-plugin": "0.7.0",
     "npm-check-updates": "3.1.10",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "2.1.3",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "1.3.0",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.4",
     "webpack-dev-server": "3.7.1",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "terser-webpack-plugin": "1.3.0",
     "webpack-merge": "4.2.1"
   }
 }
