--- a/package.json
+++ b/package.json
@@ -40,16 +40,20 @@
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.2.0",
+    "axios": "^0.21.1",
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "eslint-config-zemoso": "^1.0.1",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.1",
     "notistack": "^0.9.17",
     "react": "16.8.6",
     "react-albus": "^2.0.0",
     "react-dom": "16.8.6",
     "react-hot-loader": "4.11.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "skyflow-node": "^1.0.1-beta.13"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
@@ -72,7 +76,7 @@
     "@babel/register": "7.4.4",
     "@babel/runtime": "7.4.5",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-lodash": "3.3.4",
