--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "eslint-config-zemoso": "^1.0.1",
+    "flat": "^5.0.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
